feat: base done

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "message": "Message",
-  "messages": "Messages",
+  "index": "Index",
   "close": "Close",
   "search": "Search",
   "cancel": "Cancel",
