feat: changes for store

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -30,5 +30,6 @@
   "signinTitle": "Sign in to your account",
   "forgotPassword?": "Forgot password?",
   "emailAddress": "Email address",
-  "password": "Password"
+  "password": "Password",
+  "totalStores": "Total stores"
 }
