feat: changes for catgroyr add

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -31,5 +31,8 @@
   "forgotPassword?": "Forgot password?",
   "emailAddress": "Email address",
   "password": "Password",
-  "totalCategories": "Total categories"
+  "totalCategories": "Total categories",
+  "danger": "Danger",
+  "delete": "Delete",
+  "createCategory": "Create category"
 }
