feat: changes for analytics

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -36,5 +36,6 @@
   "delete": "Delete",
   "createCategory": "Create category",
   "addProduct": "Add product",
-  "selectedCategoryName": "Selected category name"
+  "selectedCategoryName": "Selected category name",
+  "reviewAnalytics": "Review analytics"
 }
