feat: changes for buld

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -39,5 +39,6 @@
   "selectedCategoryName": "Selected category name",
   "reviewAnalytics": "Review analytics",
   "active": "Active",
-  "save": "Save"
+  "save": "Save",
+  "skip": "Skip"
 }
